--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,11 @@ html
     link(rel='stylesheet', href='/bootstrap.min.css')
     link(rel='stylesheet', href='/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/ric.css')
+    script(src='https://cdn.firebase.com/v0/firebase.js')
+    script(src='zepto.js')
+    script(src='nongio.js')
   body
+    div#people
     .container
       .row
         .col-md-3.me
