--- a/views/index.jade
+++ b/views/index.jade
@@ -5,3 +5,6 @@ block content
   - each post in posts
     include includes/postSnippet
 
+    script(src='https://cdn.firebase.com/v0/firebase.js')
+    script(src='/zepto.js')
+    script(src='/nongio.js')
