--- a/public/ric.css
+++ b/public/ric.css
@@ -53,7 +53,6 @@ footer {
 	position: fixed;
 	right: 0px;
 	top:0px;
-	height: 100%;
 	width: 50px;
 }
 #people .person{
@@ -64,4 +63,8 @@ footer {
 	border-width: 10px 20px 10px 0;
 	right: 10px;
 	border-color: transparent #007bff transparent transparent;
+}
+.tags
+{
+	font-size: 20px;
 }
