--- a/views/includes/postSnippet.jade
+++ b/views/includes/postSnippet.jade
@@ -3,6 +3,8 @@ div.post
     a(href=post.url)
       = post.title
     span.date #{post.date.getFullYear()}
+  p.preview
+    = post.row
   div.tags
     - each tag in post.tags 
       span.label.label-ric #{tag}
