--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,16 @@ html
     link(rel='stylesheet', href='/bootstrap.min.css')
     link(rel='stylesheet', href='/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/ric.css')
-
+    script(src='https://cdn.firebase.com/v0/firebase.js')
+    script(src='/zepto.js')
+    script(src='/nongio.js')
+    script
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-39783240-2', 'nong.io');
+      ga('send', 'pageview');
   body
     div#people
     .container
@@ -28,12 +37,3 @@ html
     footer.well
       .container
         p Riccardo Canalicchio - 2013 - made with: nodejs, express, poet, bootstrap, flatstrap
-
-
-    script
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-39783240-2', 'nong.io');
-      ga('send', 'pageview');
