--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,12 +9,12 @@ html
     script(src='https://cdn.firebase.com/v0/firebase.js')
     script(src='/zepto.js')
     script(src='/nongio.js')
-    script
+    script(type="text/javascript")
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-39783240-2', 'portfolio.nong.io');
+      ga('create', 'UA-39783240-2', 'nong.io');
       ga('send', 'pageview');
   body
     div#people
