--- a/views/post.jade
+++ b/views/post.jade
@@ -6,6 +6,8 @@ block content
       a(href=post.url)
         = post.title
     span.date #{post.date.getFullYear()}
+    div
+      != post.row
     div.post.content
       != post.content
     div.tags
