--- a/views/post.jade
+++ b/views/post.jade
@@ -2,12 +2,18 @@ extends layout
 
 block content
   div.post
+    br
+    br
+    a(href="/") < back to portfolio
     h1
       a(href=post.url)
         = post.title
     span.date #{post.date.getFullYear()}
     div
       != post.row
+    br
+    br
+    br
     div.post.content
       != post.content
     div.tags
