--- a/public/ric.css
+++ b/public/ric.css
@@ -40,6 +40,7 @@ footer {
 	height: 50px;
 	font-size: 12px;
 	text-align: right;
+	margin-top: 500px;
 }
 
 .tags:after{
@@ -50,19 +51,21 @@ footer {
 }
 
 #people {
-	position: fixed;
+	position: absolute;
 	right: 0px;
 	top:0px;
 	width: 50px;
 }
 #people .person{
 	position: absolute;
-	width: 0px;
-	height: 0px;
-	border-style: solid;
-	border-width: 10px 20px 10px 0;
-	right: 10px;
-	border-color: transparent #007bff transparent transparent;
+	width: 80px;
+	height: 1px;
+	border-bottom: 1px solid;
+	right: 0px;
+}
+#person_me.person {
+	top: 100px;
+	width: 100px;
 }
 .tags
 {
