--- a/views/tag.jade
+++ b/views/tag.jade
@@ -1,6 +1,11 @@
 extends layout
 
 block content
+  br
+  br
+  a(href="/") 
+    span.glyphicon.glyphicon-chevron-left
+    |   back to portfolio
   h2 
     span.label.label-ric projects tagged #{tag}
     br
