--- a/views/includes/postSnippet.jade
+++ b/views/includes/postSnippet.jade
@@ -1,8 +1,11 @@
 div.post
-  h2.page-header
+  h2
     a(href=post.url)
       = post.title
     span.date #{post.date.getFullYear()}
+    div.pimg 
+        img(src=post.pimg)
+
   p.preview
     = post.row
   div.tags
