--- a/views/post.jade
+++ b/views/post.jade
@@ -4,7 +4,9 @@ block content
   div.post
     br
     br
-    a(href="/") < back to portfolio
+    a(href="/") 
+      span.glyphicon.glyphicon-chevron-left
+      |   back to portfolio
     h1
       a(href=post.url)
         = post.title
