--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,7 @@ html
                 h1
                   |Riccardo </br>
                   |Canalicchio
-                p.gray software engineer portfolio
+                p.gray creative technologist portfolio
                 p 
                   a(href="https://github.com/nongio") github
                 p 
